--- a/sitereact/core/templates/core/base.html
+++ b/sitereact/core/templates/core/base.html
@@ -19,7 +19,9 @@
                   <a href="#" class="text-lg font semibold hover:text-gray-500">Produse</a>
                   <a href="#" class="text-lg font semibold hover:text-gray-500">Noutati</a>
 
-                  <a href="#" class="pc-6 py-3 text-lg font-semibold bg-teal-500 text-black rounded-xl hover bg-teal-700">Log In</a>
+                    <a href="{% url 'core:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
+
+
 
                </div>
            </nav>
@@ -42,7 +44,7 @@
 
              <ul class="space-y-2">
                  <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Despre<a/></a><li>
-                 <li><a href="{% url 'contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact<a/></a><li>
+                 <li><a href="{% url 'core:contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact<a/></a><li>
                  <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Termeni si conditii<a/></a><li>
                  <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Oferte last minute<a/></a><li>
 
