--- a/sitereact/core/templates/core/base.html
+++ b/sitereact/core/templates/core/base.html
@@ -20,10 +20,8 @@
                   <a href="#" class="text-lg font semibold hover:text-gray-500">Noutati</a>
 
                     <a href="{% url 'core:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
-
-
-
-               </div>
+                    <a href="{% url 'core:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log in</a>
+                </div>
            </nav>
              <div class="px-6 py-6">
                   {% block content %}
@@ -49,7 +47,7 @@
                  <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Oferte last minute<a/></a><li>
 
 
-      </footer>
+     </footer>
 
     </body>
 </html>
